// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer
    buttons={
      Array [
        Object {
          "href": "http://occ.com.mx",
          "id": "item1",
          "label": "Item 1",
        },
      ]
    }
    classes={
      Object {
        "@media (max-width: 991px)": "@media (max-width: 991px)",
        "dropdownElement": "dropdownElement",
        "dropdownLink": "dropdownLink",
        "dropdownMenu": "dropdownMenu",
        "footer": "footer",
        "footerList": "footerList",
        "link": "link",
        "listElement": "listElement",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ul
        className="footerList"
      >
        <li
          className="listElement"
        >
          <a
            className="link"
            href="http://occ.com.mx"
            id="item1"
            onClick={undefined}
            target={undefined}
          >
            Item 1
          </a>
        </li>
      </ul>,
      "className": "footer",
      "fluid": true,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="listElement"
          >
            <a
              className="link"
              href="http://occ.com.mx"
              id="item1"
              onClick={undefined}
              target={undefined}
            >
              Item 1
            </a>
          </li>,
        ],
        "className": "footerList",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "item1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="link"
                href="http://occ.com.mx"
                id="item1"
                onClick={undefined}
                target={undefined}
              >
                Item 1
              </a>,
              undefined,
            ],
            "className": "listElement",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item 1",
                "className": "link",
                "href": "http://occ.com.mx",
                "id": "item1",
                "onClick": undefined,
                "target": undefined,
              },
              "ref": null,
              "rendered": "Item 1",
              "type": "a",
            },
            undefined,
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ul
          className="footerList"
        >
          <li
            className="listElement"
          >
            <a
              className="link"
              href="http://occ.com.mx"
              id="item1"
              onClick={undefined}
              target={undefined}
            >
              Item 1
            </a>
          </li>
        </ul>,
        "className": "footer",
        "fluid": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="listElement"
            >
              <a
                className="link"
                href="http://occ.com.mx"
                id="item1"
                onClick={undefined}
                target={undefined}
              >
                Item 1
              </a>
            </li>,
          ],
          "className": "footerList",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "item1",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  className="link"
                  href="http://occ.com.mx"
                  id="item1"
                  onClick={undefined}
                  target={undefined}
                >
                  Item 1
                </a>,
                undefined,
              ],
              "className": "listElement",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Item 1",
                  "className": "link",
                  "href": "http://occ.com.mx",
                  "id": "item1",
                  "onClick": undefined,
                  "target": undefined,
                },
                "ref": null,
                "rendered": "Item 1",
                "type": "a",
              },
              undefined,
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FooterJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Footer)
    buttons={
      Array [
        Object {
          "href": "http://occ.com.mx",
          "id": "item1",
          "label": "Item 1",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "buttons": Array [
        Object {
          "href": "http://occ.com.mx",
          "id": "item1",
          "label": "Item 1",
        },
      ],
      "classes": Object {
        "dropdownElement": "Footer-dropdownElement-0-1-6",
        "dropdownLink": "Footer-dropdownLink-0-1-7",
        "dropdownMenu": "Footer-dropdownMenu-0-1-5",
        "footer": "Footer-footer-0-1-1",
        "footerList": "Footer-footerList-0-1-2",
        "link": "Footer-link-0-1-4",
        "listElement": "Footer-listElement-0-1-3",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "buttons": Array [
          Object {
            "href": "http://occ.com.mx",
            "id": "item1",
            "label": "Item 1",
          },
        ],
        "classes": Object {
          "dropdownElement": "Footer-dropdownElement-0-1-6",
          "dropdownLink": "Footer-dropdownLink-0-1-7",
          "dropdownMenu": "Footer-dropdownMenu-0-1-5",
          "footer": "Footer-footer-0-1-1",
          "footerList": "Footer-footerList-0-1-2",
          "link": "Footer-link-0-1-4",
          "listElement": "Footer-listElement-0-1-3",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
